@@ -6,6 +6,7 @@ Changes since 1.4
 * Finish port to Xerces 3.0 (SC)
 * 64-bit API changes (SC)
 * Expose KeyInfo extensions via DOM (SC)
+* Fix c14n to omit standard xmlns:xml declarations (SC)
 
 Changes between version 1.3.1 and 1.4
 =====================================
